commented out styles in jquery for answered and unanswered link, return false stops href from running. question asked on stackoverflow, moving on till able to fix issue

--- a/incs/css/screen.css
+++ b/incs/css/screen.css
@@ -555,7 +555,7 @@ div.tucked-corners {
   border-bottom: 2px dashed rgba(200, 87, 74, .3);
 }
 
-.selected{
+.active{
   border-bottom: 2px dashed rgba(99, 129, 147, .3);
 }
 
